# copter_project

./: README.md
ecs_driver/firmware/: CMakeLists.txt
ecs_driver/firmware/Core/Include/: include.h  serial_debug.h  stm32f1xx_hal_conf.h  system_error.h  var.h
ecs_driver/firmware/Core/Src/: low_level_conf.c  main.c  serial_debug.c
firmware/: CMakeLists.txt
firmware/Core/Include/: include.h  low_level_conf.h  stm32f1xx_hal_conf.h  system_error.h
firmware/Core/Src/: low_level_conf.c  main.c  system_error.c
